--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="name">الاسم الكامل *</label>
-                                <input type="text" id="name" name="name" placeholder=" محمد سعد " required>
+                                <input type="text" id="name" name="name" placeholder="محمد أحمد" required>
                             </div>
                             <div class="form-group">
                                 <label for="email">البريد الإلكتروني *</label>
@@ -98,7 +98,7 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="phone">رقم الهاتف</label>
-                                <input type="tel" id="phone" name="phone" placeholder="01019044529">
+                                <input type="tel" id="phone" name="phone" placeholder="+966 9 1234 5678">
                             </div>
                             <div class="form-group">
                                 <label for="subject">الموضوع *</label>
