--- a/index.html
+++ b/index.html
@@ -621,89 +621,58 @@
         }
 
         function loadAdminData() {
-            // احصل على عدد المنتجات من قاعدة البيانات
-            fetch('api/products.php')
-                .then(res => res.json())
-                .then(products => {
-                    const totalProducts = products ? products.length : 0;
-                    document.getElementById('stat-products').textContent = totalProducts;
-                    document.getElementById('stat-cart').textContent = CartManager.getCartCount();
-                    document.getElementById('stat-visits').textContent = Math.floor(Math.random() * 1000);
+            // احصل على عدد المنتجات (API + localStorage)
+            const customProducts = JSON.parse(localStorage.getItem('customProducts') || '[]');
+            const totalProducts = 19 + customProducts.length;
+            document.getElementById('stat-products').textContent = totalProducts;
+            document.getElementById('stat-cart').textContent = CartManager.getCartCount();
+            document.getElementById('stat-visits').textContent = Math.floor(Math.random() * 1000);
 
-                    // تحديث قائمة المنتجات في لوحة التحكم
-                    displayProductsInAdmin();
-                })
-                .catch(err => {
-                    console.error('خطأ في جلب المنتجات:', err);
-                    document.getElementById('stat-products').textContent = '؟';
-                });
+            // تحديث قائمة المنتجات في لوحة التحكم
+            displayProductsInAdmin();
         }
 
         function updateAdminStats() {
-            loadAdminData();
+            const customProducts = JSON.parse(localStorage.getItem('customProducts') || '[]');
+            const totalProducts = 19 + customProducts.length;
+            document.getElementById('stat-products').textContent = totalProducts;
+            document.getElementById('stat-cart').textContent = CartManager.getCartCount();
         }
 
         function displayProductsInAdmin() {
             const productsList = document.getElementById('products-list');
             if (!productsList) return;
 
-            // جلب المنتجات من قاعدة البيانات
-            fetch('api/products.php')
-                .then(res => res.json())
-                .then(products => {
-                    if (!products || products.length === 0) {
-                        productsList.innerHTML = '<p style="text-align: center; color: #999;">لا توجد منتجات حالياً</p>';
-                        return;
-                    }
+            const customProducts = JSON.parse(localStorage.getItem('customProducts') || '[]');
+            if (customProducts.length === 0) {
+                productsList.innerHTML = '<p style="text-align: center; color: #999;">لا توجد منتجات مخصصة حالياً</p>';
+                return;
+            }
 
-                    let html = '';
-                    products.forEach((product) => {
-                        html += `
-                            <div style="background: #f5f5f5; padding: 15px; border-radius: 8px; margin-bottom: 10px; display: flex; justify-content: space-between; align-items: center;">
-                                <div style="flex: 1;">
-                                    <h4 style="margin: 0 0 5px 0;">${product.name}</h4>
-                                    <p style="margin: 0; font-size: 0.9em; color: #666;">السعر: ${product.price} ج.م | التصنيف: ${product.category}</p>
-                                    <img src="${product.image}" alt="${product.name}" style="max-width: 80px; height: 60px; border-radius: 5px; margin-top: 8px; object-fit: cover;" onerror="this.src='https://via.placeholder.com/80x60?text=${product.name}'">
-                                </div>
-                                <button onclick="deleteProductFromAdmin(${product.id})" style="background: #ff4757; color: white; border: none; padding: 8px 12px; border-radius: 5px; cursor: pointer; font-weight: bold; white-space: nowrap;">🗑️ حذف</button>
-                            </div>
-                        `;
-                    });
-                    productsList.innerHTML = html;
-                })
-                .catch(err => {
-                    productsList.innerHTML = '<p style="text-align: center; color: #999;">خطأ في جلب المنتجات</p>';
-                    console.error(err);
-                });
+            let html = '';
+            customProducts.forEach((product, index) => {
+                html += `
+                    <div style="background: #f5f5f5; padding: 15px; border-radius: 8px; margin-bottom: 10px; display: flex; justify-content: space-between; align-items: center;">
+                        <div>
+                            <h4 style="margin: 0 0 5px 0;">${product.name}</h4>
+                            <p style="margin: 0; font-size: 0.9em; color: #666;">السعر: ${product.price} ج.م | التصنيف: ${product.category}</p>
+                        </div>
+                        <button onclick="deleteProductFromAdmin(${index})" style="background: #ff4757; color: white; border: none; padding: 8px 12px; border-radius: 5px; cursor: pointer; font-weight: bold;">🗑️ حذف</button>
+                    </div>
+                `;
+            });
+            productsList.innerHTML = html;
         }
 
-        function deleteProductFromAdmin(productId) {
+        function deleteProductFromAdmin(index) {
             if (!confirm('هل أنت متأكد من حذف هذا المنتج؟')) return;
-            
-            fetch('api/products.php', {
-                method: 'DELETE',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    id: productId
-                })
-            })
-            .then(res => res.json())
-            .then(data => {
-                if (data.success) {
-                    alert('✅ تم حذف المنتج بنجاح');
-                    loadAdminData();
-                    loadFeaturedProducts();
-                    loadShopProducts();
-                } else {
-                    alert('❌ خطأ: ' + (data.error || 'فشل حذف المنتج'));
-                }
-            })
-            .catch(err => {
-                alert('❌ خطأ في الاتصال: ' + err.message);
-                console.error(err);
-            });
+            const customProducts = JSON.parse(localStorage.getItem('customProducts') || '[]');
+            customProducts.splice(index, 1);
+            localStorage.setItem('customProducts', JSON.stringify(customProducts));
+            alert('✅ تم حذف المنتج بنجاح');
+            loadAdminData();
+            loadFeaturedProducts();
+            loadShopProducts();
         }
 
         function addNewProduct() {
@@ -718,46 +687,33 @@
                 return;
             }
 
-            // إرسال المنتج الجديد إلى قاعدة البيانات
-            fetch('api/products.php', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    name: name,
-                    price: parseFloat(price),
-                    category: category,
-                    image: image,
-                    description: description
-                })
-            })
-            .then(res => res.json())
-            .then(data => {
-                if (data.success) {
-                    alert('✅ تم إضافة المنتج بنجاح! سيظهر على الفور على المنصة');
-                    
-                    // مسح الحقول
-                    document.getElementById('product-name').value = '';
-                    document.getElementById('product-price').value = '';
-                    document.getElementById('product-category').value = '';
-                    document.getElementById('product-image').value = '';
-                    document.getElementById('product-description').value = '';
+            // حفظ المنتج الجديد في localStorage
+            const customProducts = JSON.parse(localStorage.getItem('customProducts') || '[]');
+            const newProduct = {
+                id: Date.now().toString(),
+                name: name,
+                price: parseFloat(price),
+                category: category,
+                image: image,
+                description: description,
+                custom: true
+            };
+            customProducts.push(newProduct);
+            localStorage.setItem('customProducts', JSON.stringify(customProducts));
 
-                    // تحديث الواجهة
-                    setTimeout(() => {
-                        loadFeaturedProducts();
-                        loadShopProducts();
-                        loadAdminData();
-                    }, 500);
-                } else {
-                    alert('❌ حدث خطأ: ' + (data.error || 'فشل إضافة المنتج'));
-                }
-            })
-            .catch(err => {
-                alert('❌ خطأ في الاتصال: ' + err.message);
-                console.error(err);
-            });
+            alert('✅ تم إضافة المنتج بنجاح! سيظهر على الفور على المنصة');
+
+            // مسح الحقول
+            document.getElementById('product-name').value = '';
+            document.getElementById('product-price').value = '';
+            document.getElementById('product-category').value = '';
+            document.getElementById('product-image').value = '';
+            document.getElementById('product-description').value = '';
+
+            // تحديث الواجهة
+            loadFeaturedProducts();
+            loadShopProducts();
+            updateAdminStats();
         }
 
         function changePassword() {
