--- a/index.html
+++ b/index.html
@@ -621,58 +621,78 @@
         }
 
         function loadAdminData() {
-            // احصل على عدد المنتجات (API + localStorage)
-            const customProducts = JSON.parse(localStorage.getItem('customProducts') || '[]');
-            const totalProducts = 19 + customProducts.length;
-            document.getElementById('stat-products').textContent = totalProducts;
-            document.getElementById('stat-cart').textContent = CartManager.getCartCount();
-            document.getElementById('stat-visits').textContent = Math.floor(Math.random() * 1000);
+            // احصل على عدد المنتجات من مصدر ProductManager (API أو fallback)
+            ProductManager.fetch()
+                .then(products => {
+                    const totalProducts = products ? products.length : 0;
+                    document.getElementById('stat-products').textContent = totalProducts;
+                    document.getElementById('stat-cart').textContent = CartManager.getCartCount();
+                    document.getElementById('stat-visits').textContent = Math.floor(Math.random() * 1000);
 
-            // تحديث قائمة المنتجات في لوحة التحكم
-            displayProductsInAdmin();
+                    // تحديث قائمة المنتجات في لوحة التحكم
+                    displayProductsInAdmin();
+                })
+                .catch(err => {
+                    console.error('خطأ في جلب المنتجات:', err);
+                    document.getElementById('stat-products').textContent = '؟';
+                });
         }
 
         function updateAdminStats() {
-            const customProducts = JSON.parse(localStorage.getItem('customProducts') || '[]');
-            const totalProducts = 19 + customProducts.length;
-            document.getElementById('stat-products').textContent = totalProducts;
-            document.getElementById('stat-cart').textContent = CartManager.getCartCount();
+            loadAdminData();
         }
 
         function displayProductsInAdmin() {
             const productsList = document.getElementById('products-list');
             if (!productsList) return;
 
-            const customProducts = JSON.parse(localStorage.getItem('customProducts') || '[]');
-            if (customProducts.length === 0) {
-                productsList.innerHTML = '<p style="text-align: center; color: #999;">لا توجد منتجات مخصصة حالياً</p>';
-                return;
-            }
+            // جلب المنتجات من ProductManager (API أو fallback)
+            ProductManager.fetch()
+                .then(products => {
+                    if (!products || products.length === 0) {
+                        productsList.innerHTML = '<p style="text-align: center; color: #999;">لا توجد منتجات حالياً</p>';
+                        return;
+                    }
 
-            let html = '';
-            customProducts.forEach((product, index) => {
-                html += `
-                    <div style="background: #f5f5f5; padding: 15px; border-radius: 8px; margin-bottom: 10px; display: flex; justify-content: space-between; align-items: center;">
-                        <div>
-                            <h4 style="margin: 0 0 5px 0;">${product.name}</h4>
-                            <p style="margin: 0; font-size: 0.9em; color: #666;">السعر: ${product.price} ج.م | التصنيف: ${product.category}</p>
-                        </div>
-                        <button onclick="deleteProductFromAdmin(${index})" style="background: #ff4757; color: white; border: none; padding: 8px 12px; border-radius: 5px; cursor: pointer; font-weight: bold;">🗑️ حذف</button>
-                    </div>
-                `;
-            });
-            productsList.innerHTML = html;
+                    let html = '';
+                    products.forEach((product) => {
+                        html += `
+                            <div style="background: #f5f5f5; padding: 15px; border-radius: 8px; margin-bottom: 10px; display: flex; justify-content: space-between; align-items: center;">
+                                <div style="flex: 1;">
+                                    <h4 style="margin: 0 0 5px 0;">${product.name}</h4>
+                                    <p style="margin: 0; font-size: 0.9em; color: #666;">السعر: ${product.price} ج.م | التصنيف: ${product.category}</p>
+                                    <img src="${product.image}" alt="${product.name}" style="max-width: 80px; height: 60px; border-radius: 5px; margin-top: 8px; object-fit: cover;" onerror="this.src='https://via.placeholder.com/80x60?text=${product.name}'">
+                                </div>
+                                <button onclick="deleteProductFromAdmin('${product.id}')" style="background: #ff4757; color: white; border: none; padding: 8px 12px; border-radius: 5px; cursor: pointer; font-weight: bold; white-space: nowrap;">🗑️ حذف</button>
+                            </div>
+                        `;
+                    });
+                    productsList.innerHTML = html;
+                })
+                .catch(err => {
+                    productsList.innerHTML = '<p style="text-align: center; color: #999;">خطأ في جلب المنتجات</p>';
+                    console.error(err);
+                });
         }
 
-        function deleteProductFromAdmin(index) {
+        function deleteProductFromAdmin(productId) {
             if (!confirm('هل أنت متأكد من حذف هذا المنتج؟')) return;
-            const customProducts = JSON.parse(localStorage.getItem('customProducts') || '[]');
-            customProducts.splice(index, 1);
-            localStorage.setItem('customProducts', JSON.stringify(customProducts));
-            alert('✅ تم حذف المنتج بنجاح');
-            loadAdminData();
-            loadFeaturedProducts();
-            loadShopProducts();
+            
+            ProductManager.delete(productId)
+            .then(data => {
+                if (data.success) {
+                    alert('✅ تم حذف المنتج بنجاح');
+                    loadAdminData();
+                    loadFeaturedProducts();
+                    loadShopProducts();
+                } else {
+                    alert('❌ خطأ: ' + (data.error || 'فشل حذف المنتج'));
+                }
+            })
+            .catch(err => {
+                alert('❌ خطأ في الاتصال: ' + err.message);
+                console.error(err);
+            });
         }
 
         function addNewProduct() {
@@ -687,33 +707,39 @@
                 return;
             }
 
-            // حفظ المنتج الجديد في localStorage
-            const customProducts = JSON.parse(localStorage.getItem('customProducts') || '[]');
-            const newProduct = {
-                id: Date.now().toString(),
+            // إرسال المنتج الجديد إلى ProductManager (يحاول API ثم fallback local)
+            ProductManager.create({
                 name: name,
                 price: parseFloat(price),
                 category: category,
                 image: image,
-                description: description,
-                custom: true
-            };
-            customProducts.push(newProduct);
-            localStorage.setItem('customProducts', JSON.stringify(customProducts));
+                description: description
+            })
+            .then(data => {
+                if (data.success) {
+                    alert('✅ تم إضافة المنتج بنجاح! سيظهر على الفور على المنصة');
+                    
+                    // مسح الحقول
+                    document.getElementById('product-name').value = '';
+                    document.getElementById('product-price').value = '';
+                    document.getElementById('product-category').value = '';
+                    document.getElementById('product-image').value = '';
+                    document.getElementById('product-description').value = '';
 
-            alert('✅ تم إضافة المنتج بنجاح! سيظهر على الفور على المنصة');
-
-            // مسح الحقول
-            document.getElementById('product-name').value = '';
-            document.getElementById('product-price').value = '';
-            document.getElementById('product-category').value = '';
-            document.getElementById('product-image').value = '';
-            document.getElementById('product-description').value = '';
-
-            // تحديث الواجهة
-            loadFeaturedProducts();
-            loadShopProducts();
-            updateAdminStats();
+                    // تحديث الواجهة
+                    setTimeout(() => {
+                        loadFeaturedProducts();
+                        loadShopProducts();
+                        loadAdminData();
+                    }, 500);
+                } else {
+                    alert('❌ حدث خطأ: ' + (data.error || 'فشل إضافة المنتج'));
+                }
+            })
+            .catch(err => {
+                alert('❌ خطأ في الاتصال: ' + err.message);
+                console.error(err);
+            });
         }
 
         function changePassword() {
@@ -913,9 +939,11 @@
                 // قبول الفتح فقط عند تشغيل المنصة محلياً (localhost / 127.0.0.1 / file:)
                 const host = location.hostname;
                 const isLocal = (host === 'localhost' || host === '127.0.0.1' || location.protocol === 'file:');
-                if (!isLocal) {
+                // إذا الموقع غير محلي، اسمح بالوصول إذا كان المفتاح محفوظاً محلياً (مالك المتصفح)
+                const storedKey = localStorage.getItem('ownerKey');
+                if (!isLocal && !(storedKey && storedKey.trim() === 'saymon-owner-2026')) {
                     adminModal.style.display = 'none';
-                    alert('🚫 لوحة التحكم متاحة فقط من الجهاز المضيف المحلي');
+                    alert('🚫 لوحة التحكم متاحة فقط من الجهاز المضيف المحلي أو للمالك المسجل على هذا المتصفح');
                     return;
                 }
 
